[package]
name = "monkey-interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
num-derive = "0.4.1"
num-traits = "0.2.17"
phf = {version =  "0.11.2", features = ["macros"]}
strum = "0.25.0"
strum_macros = "0.25.1"
